--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,42 @@
+body {
+  background-color: cornflowerblue;
+}
+
 h1 {
   color: cornflowerblue;
+  background-color: aliceblue;
 }
 
 #totalYen {
-    border-style: solid;
-    border-width: 2px;
+  margin: auto;
+  border-style: solid;
+  border-width: 2px;
+  width: 40%;
+  background-color: aliceblue;
 }
 
 #container1 {
-    text-align: center
+  text-align: center
+}
+
+.box {
+  box-sizing: border-box;
+  width: 50%;
+  float: left;
+}
+
+#tixBtn {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  width: 30%;
+}
+
+.ticket {
+  font-size: 20px;
+
+}
+
+.calc {
+  font-size: 40px;
 }
