--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,18 @@
 body {
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
+  background-image: url(/assets/star2.jpg);
 }
 
 img {
   max-width: 15%;
   height: auto;
+  background-color: aliceblue;
+}
+
+#topHeader {
+  background-color:aliceblue;
+  margin: -.6% -.7% 0% -.7%;
+  border-bottom: 8px double midnightblue;
 }
 
 #company {
@@ -17,10 +25,11 @@ img {
 
 #totalYen {
   font-family: 'Berkshire Swash', cursive;
+  color: midnightblue;
   font-size: 30px;
-  margin: 3% 20% 3% 20%;
+  margin: 2% 25% 2% 25%;
   padding: 1%;
-  border: solid cornflowerblue;
+  border: outset cornflowerblue;
   border-width: 4px;
   border-radius: 25px;
   /* width: 90%; */
@@ -36,15 +45,21 @@ img {
   text-align: center
 }
 
-/* #container2 {
-  background-image: "https://backgroundcheckall.com/wp-content/uploads/2017/12/starfield-background-1.png";
-} */
+#container2 {
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
+  
+}
 
 .box {
-  box-sizing: border-box;
+  /* box-sizing: border-box;
   width: 50%;
-  float: left;
-  
+  float: left; */
+  width: 100%;
+
 }
 
 #tixBtn {
@@ -54,17 +69,25 @@ img {
   /* width: 50%; */
   margin: 0% 20% 0% 20%;
   font-family: 'Berkshire Swash', cursive;
+  
 }
 
 .ticket {
   font-size: 25px;
   font-family: 'Berkshire Swash', cursive;
+  cursor: pointer;
+  height: 60px;
+  margin-bottom: 4px;
 }
 
-.calc {
+.ticket:hover {
+  color:cornflowerblue;
+}
+
+.calc-btn {
   font-size: 25px;
   width: 15%;
-  height: 70px;
+  height: 60px;
   margin-bottom: 4px;
   /* border-left: 1px solid black;
   border-right: 1px solid black;
@@ -74,4 +97,22 @@ img {
   /* color: black;
   background: aliceblue; */
   font-family: 'Berkshire Swash', cursive;
+  cursor: pointer;
 }
+
+.calc-btn:hover {
+  color: cornflowerblue;
+}
+
+.op {
+  background-color: cornflowerblue;
+}
+
+.op:hover {
+  color: aliceblue;
+}
+
+#calc-equals {
+  width: 76.8%;
+}
+
