--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,11 @@ img {
 
 }
 
+button {
+  border: 2px solid midnightblue;
+  border-radius: 50px;
+}
+
 #tixBtn {
   display: flex;
   flex-direction: column;
@@ -78,6 +83,7 @@ img {
   cursor: pointer;
   height: 60px;
   margin-bottom: 4px;
+  background-color: aliceblue;
 }
 
 .ticket:hover {
@@ -94,8 +100,7 @@ img {
   border-top: 1px solid black;
   border-bottom: 1px solid silver; */
   font-weight: bold;
-  /* color: black;
-  background: aliceblue; */
+  background-color: aliceblue; 
   font-family: 'Berkshire Swash', cursive;
   cursor: pointer;
 }
@@ -113,6 +118,10 @@ img {
 }
 
 #calc-equals {
-  width: 76.8%;
+  width: 76.85%;
 }
 
+.func {
+  background-color: midnightblue;
+  color: aliceblue;
+}
